# stac-satellite-imagery-toolkit

./: README.md  pyproject.toml  requirements.txt
imagery_ingest_kit/: __init__.py  cli.py  download.py  query.py
tests/: test_download.py  test_query.py
