[project]
name = "imagery-ingest-kit"
version = "0.1.0"
description = "Utilities for ingesting STAC-cataloged satellite imagery into geospatial processing workflows."
requires-python = ">=3.9"
dependencies = [
    "pystac-client>=0.7,<1.0",
    "requests>=2.28",
]

[project.scripts]
imagery-ingest-kit = "imagery_ingest_kit.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
